--- a/security.html
+++ b/security.html
@@ -39,8 +39,12 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qJEaVfwc&k=Job&j=oqTP9fw1&__jvst=Employee&__jvsd=swgOAhwW&__jvsc=Twitter&bid=ndURmMwB'>Herjavec Group Careers - Tier I - Security Analyst</a></h5> 
+<p><span class="badge badge-light">Toronto, Ontario</span></p>
+<p>Posted on:: 2019-10-28</p>
+<hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qoZ9Vfwb&k=Job&j=oZ9cafwe&__jvst=Employee+Referral&__jvsd=seBixgwp&__jvsc=Twitter&bid=nXFRmMw6'>Imperva Careers - Cyber Security Engineer - Managed Services</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Singapore, Singapore</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Colliers1/743999692873355-security-analyst'>Colliers Security Analyst | SmartRecruiters</a></h5> 
@@ -48,7 +52,7 @@
 <p>Posted on:: 2019-10-28</p>
 <hr/>
 <h5><a href='http://intellipro.applytojob.com/apply/S4mobGscTx/Security-Operations-Engineer'>Security Operations Engineer - IntelliPro Group Inc. - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Kirkland, WA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
 <h5><a href='https://jobs.lever.co/kennasecurity/06410394-4596-4aad-8835-45834a4ed855'>Kenna Security - Sales Engineer - Boston</a></h5> 
@@ -71,7 +75,7 @@
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qmr9VfwB&k=Job&j=orL0afw6&__jvst=Tenable+Employee&__jvsd=s3pCGgwv&__jvsc=Twitter&bid=nSKBmMwQ'>Tenable Careers - Security Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qmr9VfwB&k=Job&j=orL0afw6&__jvst=Tenable+Employee&__jvsd=s3pCGgwv&__jvsc=Twitter&bid=nSKBmMwQ'>Tenable Careers - Security Engineer</a></h5> 
 <p><span class="badge badge-light">Columbia, Maryland</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -79,7 +83,7 @@
 <p><span class="badge badge-light">Plano, TX  Plano, TX</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oGNPafwc&__jvst=Employee&__jvsd=sBKSFgwD&__jvsc=Twitter&bid=nSt7lMw4'>Guidewire Software, Inc. Careers - Product Security Architect Manager- San Mateo, CA</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oGNPafwc&__jvst=Employee&__jvsd=sBKSFgwD&__jvsc=Twitter&bid=nSt7lMw4'>Guidewire Software, Inc. Careers - Product Security Architect Manager- San Mateo, CA</a></h5> 
 <p><span class="badge badge-light">San Mateo, CA  San Mateo, CA  San Mateo, California</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -197,7 +201,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://edc.referrals.selectminds.com/jobs/professional-services-security-architect-2453'>Professional Services Security Architect - Entrust Datacard Careers</a></h5> 
+<h5><a href='https://edc.referrals.selectminds.com/jobs/professional-services-security-architect-2453'>Professional Services Security Architect - Entrust Datacard Careers</a></h5> 
 <p><span class="badge badge-light">Singapore, Singapore Singapore</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -250,7 +254,7 @@ data leakage prevention; Responsible for Web application firewall and related?..
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://razorpay.recruiterbox.com/jobs/fk03ipb/'>
+<h5><a href='https://razorpay.recruiterbox.com/jobs/fk03ipb/'>
     Senior Security Engineer (Compliance SME) at Razorpay
 </a></h5> 
 <p><span class="badge badge-light">Bengaluru</span></p>
@@ -316,7 +320,7 @@ application penetration tester. Here in Ryanair, you will conduct Manual?...</p>
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Optimizely/743999698075051-staff-security-engineer'>Optimizely Staff Security Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Optimizely/743999698075051-staff-security-engineer'>Optimizely Staff Security Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -364,7 +368,7 @@ application penetration tester. Here in Ryanair, you will conduct Manual?...</p>
 <p><span class="badge badge-light">North Billerica, Massachusetts</span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/tenable-network-security/job/o0Zpbfwj'>Tenable Careers - Customer Success Security Sales Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/tenable-network-security/job/o0Zpbfwj'>Tenable Careers - Customer Success Security Sales Engineer</a></h5> 
 <p><span class="badge badge-light">Columbia, Maryland</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -376,7 +380,7 @@ application penetration tester. Here in Ryanair, you will conduct Manual?...</p>
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/taylorcorp/job/o7lobfwL'>Taylor Corporation Careers - Sr. Information Security Analyst</a></h5> 
+<h5><a href='https://jobs.jobvite.com/taylorcorp/job/o7lobfwL'>Taylor Corporation Careers - Sr. Information Security Analyst</a></h5> 
 <p><span class="badge badge-light">Eden Prairie, Minnesota</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -396,7 +400,7 @@ application penetration tester. Here in Ryanair, you will conduct Manual?...</p>
 <p><span class="badge badge-light">Boston, MA</span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CommandServicesSupportInc/743999696050100-info-security-analyst-senior'>Command Services & Support, Inc. Info. Security Analyst Senior | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/CommandServicesSupportInc/743999696050100-info-security-analyst-senior'>Command Services & Support, Inc. Info. Security Analyst Senior | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -408,7 +412,7 @@ application penetration tester. Here in Ryanair, you will conduct Manual?...</p>
 <p><span class="badge badge-light">Melbourne</span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Optimizely/743999698070000-senior-security-engineer'>Optimizely Senior Security Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Optimizely/743999698070000-senior-security-engineer'>Optimizely Senior Security Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -420,7 +424,7 @@ application penetration tester. Here in Ryanair, you will conduct Manual?...</p>
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Veeam2/743999698041462-application-security-engineer-'>Veeam Application Security Engineer (? ?????) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Veeam2/743999698041462-application-security-engineer-'>Veeam Application Security Engineer (? ?????) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -448,11 +452,7 @@ application penetration tester. Here in Ryanair, you will conduct Manual?...</p>
 <p><span class="badge badge-light">Oakland, CA</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=olGwafwr&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=nYo0iMwV'>Guidewire Software, Inc. Careers - Senior Security Engineer - San Mateo,Ca/Remote</a></h5> 
-<p><span class="badge badge-light">San Mateo, California  United States</span></p>
-<p>Posted on:: 2019-10-24</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
+
 
 <!--End body here -->
 
