--- a/frontend.html
+++ b/frontend.html
@@ -38,12 +38,24 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://boards.greenhouse.io/soundhoundinc/jobs/4499058002'>Job Application for Senior Front-end Engineer at SoundHound Inc.</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-28</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/soundhoundinc/jobs/4499059002'>Job Application for Senior Front-end Engineer at SoundHound Inc.</a></h5> 
+<p><span class="badge badge-light">Boulder</span></p>
+<p>Posted on: 2019-10-28</p>
+<hr/>
+<h5><a href='https://jkweb.join.com/jobs/460224-web-entwickler-frontend-60-100'>Job @ JKweb (Z?rich): Web Entwickler Frontend 60 -... | JOIN</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-28</p>
+<hr/>
 <h5><a href='http://intellipro.applytojob.com/apply/DHbmxDnxN7/Front-End-Engineer'>Front End Engineer - IntelliPro Group Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">Mountain View, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
 <h5><a href='http://intellipro.applytojob.com/apply/PgTcQsNt2N/Sales-Tools-FrontEnd-Engineer'>Sales Tools Front-End Engineer - IntelliPro Group Inc. - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">San Francisco, CA  San Francisco</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
 <h5><a href='http://scripbox.recruiterbox.com/jobs/fk03ihh'>
@@ -64,7 +76,7 @@
 <p><span class="badge badge-light">Kyiv, Ukraine</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Square/743999698336320-senior-software-engineer-front-end-full-stack-customers-team'>Square Senior Software Engineer (Front-End/Full Stack), Customers Team | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Square/743999698336320-senior-software-engineer-front-end-full-stack-customers-team'>Square Senior Software Engineer (Front-End/Full Stack), Customers Team | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -120,11 +132,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://zonalretaildatasystemslimited.applytojob.com/apply/9gUPd13Azp/Senior-Front-End-Developer'>Senior Front End Developer - Zonal Retail Data Systems Limited - Career Page</a></h5> 
+<h5><a href='http://zonalretaildatasystemslimited.applytojob.com/apply/9gUPd13Azp/Senior-Front-End-Developer'>Senior Front End Developer - Zonal Retail Data Systems Limited - Career Page</a></h5> 
 <p><span class="badge badge-light">Edinburgh Edinburgh</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qS09VfwG&k=Job&j=o0K89fwL&__jvst=Employee+Referral&__jvsd=saeqrgw0&__jvsc=Twitter&bid=nzE1lMwQ'>Palo Alto Networks Careers - Intern - Frontend Management Software Development Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qS09VfwG&k=Job&j=o0K89fwL&__jvst=Employee+Referral&__jvsd=saeqrgw0&__jvsc=Twitter&bid=nzE1lMwQ'>Palo Alto Networks Careers - Intern - Frontend Management Software Development Engineer</a></h5> 
 <p><span class="badge badge-light">Palo Alto Palo Alto Santa Clara, California  Palo Alto</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -175,7 +187,7 @@ work hard on innovation for the insurance industry with the newest technology?..
 <p><span class="badge badge-light">Santa Monica, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.42jobs.io/react/jobs/8416-frontend-engineer-m-f-d'>
+<h5><a href='https://www.42jobs.io/react/jobs/8416-frontend-engineer-m-f-d'>
 Frontend Engineer (m/f/d) at XAIN AG in Berlin | React jobs | 42jobs.io
 
 </a></h5> 
@@ -208,7 +220,7 @@ Frontend Developer (f|m|x) - Acquisition &amp; Loyalty at idealo internet GmbH i
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e584443'>Stellenangebot: Senior Frontend Developer (w/m/d) (K?ln) ? dasauge? Stellenmarkt</a></h5> 
+<h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e584443'>Stellenangebot: Senior Frontend Developer (w/m/d) (K?ln) ? dasauge? Stellenmarkt</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -240,7 +252,7 @@ Frontend Developer (f|m|x) - Acquisition &amp; Loyalty at idealo internet GmbH i
 <p><span class="badge badge-light">Barcelona, Spain</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Netcentric/743999698241118-senior-frontend-developer'>Netcentric Senior Frontend Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Netcentric/743999698241118-senior-frontend-developer'>Netcentric Senior Frontend Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Denmark</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -252,7 +264,7 @@ Frontend Developer (f|m|x) - Acquisition &amp; Loyalty at idealo internet GmbH i
 <p><span class="badge badge-light">Amsterdam, Netherlands</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Netcentric/743999698243028-frontend-developer-m-f-x-'>Netcentric Frontend Developer (m/f/x) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Netcentric/743999698243028-frontend-developer-m-f-x-'>Netcentric Frontend Developer (m/f/x) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -430,7 +442,7 @@ Frontend Developer (f|m|x) - Acquisition &amp; Loyalty at idealo internet GmbH i
 <p><span class="badge badge-light">San Jose, CA</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/ocadotechnology/jobs/4474088002'>Job Application for Front-end Software Engineer - Store Pick at Ocado Group</a></h5> 
+<h5><a href='https://boards.greenhouse.io/ocadotechnology/jobs/4474088002'>Job Application for Front-end Software Engineer - Store Pick at Ocado Group</a></h5> 
 <p><span class="badge badge-light">France Canada</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -438,7 +450,7 @@ Frontend Developer (f|m|x) - Acquisition &amp; Loyalty at idealo internet GmbH i
 <p><span class="badge badge-light">Amsterdam</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://eventstravel.recruitee.com/o/front-end-developer'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://eventstravel.recruitee.com/o/front-end-developer'>
       Front End Developer - Events Travel
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -446,18 +458,6 @@ Frontend Developer (f|m|x) - Acquisition &amp; Loyalty at idealo internet GmbH i
 <hr/>
 <h5><a href='https://jobs.jobvite.com/mitel/job/oNvpbfwC'>Mitel Careers - Front-End Cloud Developer (Junior)</a></h5> 
 <p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-26</p>
-<hr/>
-<h5><a href='http://cloudbeds.applytojob.com/apply/sUqcC8piR7/Frontend-Engineer-Remote'>Frontend Engineer (Remote) - Cloudbeds - Career Page</a></h5> 
-<p><span class="badge badge-light">Bogot?</span></p>
-<p>Posted on: 2019-10-26</p>
-<hr/>
-<h5><a href='https://dataguard.join.com/jobs/454164-frontend-developer-m-w-d-in-muenchen'>Job @ DataGuard (Munich): Frontend Developer (m/w/... | JOIN</a></h5> 
-<p><span class="badge badge-light">Munich M?nchen  Munich</span></p>
-<p>Posted on: 2019-10-26</p>
-<hr/>
-<h5><a href='https://bridgemaker.join.com/jobs/462075-frontend-developer-m-w-d-uptodate'>Job @ Bridgemaker (Munich): Frontend Developer (m/... | JOIN</a></h5> 
-<p><span class="badge badge-light">Munich Munich</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
 
